--- a/src/dune
+++ b/src/dune
@@ -5,9 +5,8 @@
  (name Discover)
  (preprocess (pps ppx_compare ppx_sexp_conv
                   ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
- (libraries core unix str ocamlgraph fileutils llvm
-            llvm.target llvm.bitreader llvm.bitwriter llvm.irreader
-            yaml ezjsonm)
+ (libraries core unix str ocamlgraph fileutils yaml ezjsonm
+            llvm llvm.target llvm.bitreader llvm.bitwriter llvm.irreader)
  (link_flags (-linkall))
  (modes native)
  ; (modes byte)
