update license info

--- a/src/smt/dune
+++ b/src/smt/dune
@@ -1,10 +1,9 @@
-;;--------------------------------------------------------------------
-;; Author: Ta Quang Trung
-;; Date: 2020
+;;---------------------------------------------------------------------
+;; This file is part of the source code analyzer Discover.
 ;;
 ;; Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
 ;; All rights reserved.
-;;--------------------------------------------------------------------
+;;---------------------------------------------------------------------
 
 ;; lexer
 (ocamllex (modules z3lexer))
