--- a/src/seplog/dune
+++ b/src/seplog/dune
@@ -1,8 +1,7 @@
 ;;---------------------------------------------------------------------
-;; Author: Ta Quang Trung
-;; Date: 2020
+;; This file is part of the source code analyzer Discover.
 ;;
-;;  Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
+;; Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
 ;; All rights reserved.
 ;;---------------------------------------------------------------------
 
