--- a/src/dune
+++ b/src/dune
@@ -13,7 +13,7 @@
  (preprocess (pps ppx_compare ppx_sexp_conv
                   ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
  (libraries core unix str ocamlgraph fileutils yaml ezjsonm
-            llvm llvm.target llvm.bitreader llvm.bitwriter llvm.irreader)
+            llvm llvm.target llvm.bitreader llvm.bitwriter llvm.irreader llvm.debuginfo)
  (link_flags (-linkall))
  (modes native)
  ; (modes byte)
