--- a/src/dune
+++ b/src/dune
@@ -24,7 +24,11 @@
  ; (flags (:standard -w -3-27-28-32-33))
 
  ;; For develoment
+ ; (modes native)
  (modes byte)
- (flags (:standard -w -3-26-27-28-32-33-66 -g -annot))
+ (flags (:standard
+          -w -3-26-27-28-32-33+60+66
+          -warn-error +60+66
+          -g -annot))
 
  (link_flags (-linkall)))
