--- a/src/llvm/dune
+++ b/src/llvm/dune
@@ -6,7 +6,11 @@
 ;;---------------------------------------------------------------------
 
 ;; lexer
- (ocamllex (modules annlexer))
 
- ;; parser for entailments
- (menhir (modules annparser))
+(ocamllex
+ (modules annlexer))
+
+;; parser for entailments
+
+(menhir
+ (modules annparser))
