--- a/src/dune
+++ b/src/dune
@@ -10,29 +10,39 @@
 ; (env (_ (flags :standard -w +60)))
 
 ;; binary
+
 (executable
  (name Discover)
-
  ; (empty_module_interface_if_absent)
-
- (preprocess (pps ppx_compare ppx_sexp_conv
-                  ppx_deriving.show ppx_deriving.ord ppx_deriving.eq
-                  ppx_let))
-
- (libraries core unix str ocamlgraph fileutils yaml ezjsonm num
-            llvm llvm.target llvm.bitreader llvm.bitwriter llvm.irreader
-            llvm.debuginfo)
-
+ (preprocess
+  (pps
+   ppx_compare
+   ppx_sexp_conv
+   ppx_deriving.show
+   ppx_deriving.ord
+   ppx_deriving.eq
+   ppx_let))
+ (libraries
+  core
+  unix
+  str
+  ocamlgraph
+  fileutils
+  yaml
+  ezjsonm
+  num
+  llvm
+  llvm.target
+  llvm.bitreader
+  llvm.bitwriter
+  llvm.irreader
+  llvm.debuginfo)
  ;; For deployment
  ; (modes native)
  ; (flags (:standard -w -3-27-28-32-33))
-
  ;; For develoment
  ; (modes native)
  (modes byte)
- (flags (:standard
-          -w -3+26-27-28+31-32+33+60+66
-          -warn-error +31+60+66
-          -g -annot))
-
+ (flags
+  (:standard -w -3+26-27-28+31-32+33+60+66 -warn-error +31+60+66 -g -annot))
  (link_flags (-linkall)))
