[llvm-normalizer] clang-format support for CMake

--- a/llvm-normalizer/CMakeLists.txt
+++ b/llvm-normalizer/CMakeLists.txt
@@ -99,3 +99,6 @@ include_directories(include)
 
 # Now adding source code
 add_subdirectory(src)
+
+# Add clang-format support
+include("${CMAKE_DIR}/ClangFormat.cmake")
