--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
 
       - run: opam install . --deps-only --with-test
 
-      - run: opam exec -- dune @fmt
+      - run: opam exec -- dune build @fmt
 
-      - run: opam exec -- dune build
+      - run: opam exec -- dune build src/Discover.exe
 
       # - run: opam exec -- dune runtest
