--- a/discover.opam
+++ b/discover.opam
@@ -10,6 +10,9 @@ depends: [
   "yaml"
   "ezjsonm"
   "ocamlformat"
+  "ppx_deriving"
+  "ppx_sexp_conv"
+  "ppx_compare"
   "num"
   "odoc" {with-doc}
 ]
