disable auto workflow on push event

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Main workflow
 
 on:
   pull_request:
-  push:
+  # push:
+  workflow_dispatch:
   schedule:
     # Prime the caches every Monday
     - cron: 0 1 * * MON
