refactor code of bug annotation instrumentation

--- a/src/dune
+++ b/src/dune
@@ -44,5 +44,7 @@
  ; (modes native)
  (modes byte)
  (flags
-  (:standard -w -3+26-27-28+31-32+33+60+66 -warn-error +31+60+66 -g -annot))
+  (:standard -w -3+26-27-28+31-32+33+34+60+66
+             -warn-error +31+34+60+66
+             -g -annot))
  (link_flags (-linkall)))
