--- a/discover.opam
+++ b/discover.opam
@@ -9,7 +9,7 @@ depends: [
   "llvm"
   "yaml"
   "ezjsonm"
-  "ocamlformat"
+  "ocamlformat" {dev}
   "ppx_deriving"
   "ppx_sexp_conv"
   "ppx_compare"
