--- a/src/dune
+++ b/src/dune
@@ -44,7 +44,11 @@
  ; (modes native)
  (modes byte)
  (flags
-  (:standard -w -3+26-27-28+31-32+33+34+60+66
-             -warn-error +31+34+60+66
-             -g -annot))
+  (:standard
+   -w
+   -3+26-27-28+31-32+33+34+60+66
+   -warn-error
+   +31+34+60+66
+   -g
+   -annot))
  (link_flags (-linkall)))
