Add recursive testing. Change benchmark to test_benchmark

--- a/src/dune
+++ b/src/dune
@@ -12,7 +12,7 @@
 ;; binary
 
 (executables
- (names Discover Benchmark)
+ (names Discover Test_benchmark)
  ; (empty_module_interface_if_absent)
  (preprocess
   (pps
