[llvm-normalizer] auto generate version info at compile time

--- a/llvm-normalizer/CMakeLists.txt
+++ b/llvm-normalizer/CMakeLists.txt
@@ -102,3 +102,6 @@ add_subdirectory(src)
 
 # Add clang-format support
 include("${CMAKE_DIR}/ClangFormat.cmake")
+
+# Add support of generating version information
+include("${CMAKE_DIR}/Version.cmake")
