--- a/llvm-normalizer/src/Utils/CMakeLists.txt
+++ b/llvm-normalizer/src/Utils/CMakeLists.txt
@@ -6,6 +6,6 @@
 ####################################################################
 
 set(LLNormDebug
-  ${CMAKE_CURRENT_SOURCE_DIR}/Debug.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Common.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PrintIR.cpp
   PARENT_SCOPE)
